mutate_exisiting/label_existing_ns_policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: label-existing-namespaces
  annotations:
    policies.kyverno.io/title: Label Existing Namespaces
    policies.kyverno.io/category: other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace
    kyverno.io/kyverno-version: 1.7.0
    policies.kyverno.io/minversion: 1.7.0
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/description: >-
      There must be some AdmissionReview request which pertains to some Namespace
      to trigger this policy. As long as this rule exists, Kyverno will manage
      this label on all target resources, either re-adding or replacing the label value.
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
  - name: label-existing-namespaces-rule
    match:
      any:
      - resources:
          kinds:
          - Namespace
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - default
          - kube-public
          - kyverno
    mutate:
      targets:
        - apiVersion: v1
          kind: Namespace
      patchStrategicMerge:
        metadata:
          labels:
            existing: newlabelvalue
